--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <style>
+      @font-face {
+        font-family: "Computer Modern";
+        src: url('http://spratt.github.io/Computer-Modern/cmunss.otf');
+      }
+      @font-face {
+        font-family: "Computer Modern";
+        src: url('http://spratt.github.io/Computer-Modern/cmunsx.otf');
+        font-weight: bold;
+      }
+      @font-face {
+        font-family: "Computer Modern";
+        src: url('http://spratt.github.io/Computer-Modern/cmunsi.otf');
+        font-style: italic, oblique;
+      }
+      @font-face {
+        font-family: "Computer Modern";
+        src: url('http://spratt.github.io/Computer-Modern/cmunbxo.otf');
+        font-weight: bold;
+        font-style: italic, oblique;
+      }
+    
+      body {
+        font-family: "Computer Modern", serif;
+      }
+    </style>
     <title>Website by ds604</title>
   </head>
 
