--- a/example.html
+++ b/example.html
@@ -21,6 +21,6 @@
             Canvas not supported
         </canvas>
         
-        <script src='js/example.js'></script>
+        <script src='javascripts/example.js'></script>
     </body>
 <html>
