--- a/blurImage.html
+++ b/blurImage.html
@@ -17,7 +17,7 @@
         img.onload=function(){
             for (var y=0;y<10;++y) ctx.drawImage(img,0,y);
         }
-        img.src = 'http://phrogz.net/tmp/gkhead-small.png';
+        img.src = 'https://dl.dropboxusercontent.com/u/7632896/ShlomitRiger.jpg';
 	</script>
   </body>
 </html>
