--- a/mathjax.html
+++ b/mathjax.html
@@ -2,15 +2,70 @@
 <html>
 <head>
 <title>MathJax TeX Test Page</title>
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-</script>
-<script type="text/javascript"
-  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+	<script type="text/x-mathjax-config">
+	  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+	</script>
+	<script type="text/javascript"
+	  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+	</script>
+	<style>
+		body {
+			color: #B1B1B1;
+			background-color: #000011;
+			font-family: Arial, sans-serif;
+			font-size: 9pt;
+		}
+		div{
+			//height:inherit;
+			width:400PX;
+			text-align:left;
+			border:0px solid silver;
+			//display: table-cell;
+			vertical-align:middle;
+			margin: 0 auto;
+			//position: relative;
+		}
+		footer { 
+			width: 175px; 
+			height: 3em; 
+			position: absolute; 
+			bottom: 0;
+			right: 0;
+			padding: 3px 5px 5px 5px;
+			text-align: left;
+			z-index: 200;
+		}
+	</style>
+	
 </head>
 <body>
-When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
-$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+	<div>
+		When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
+		$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+		Faber-Castell is the largest maker of wood-encased pencils in the world and also makes a broad range of pens, crayons and art and drawing supplies as well as accessories like erasers and sharpeners. About half the company’s German production is exported, mostly to other countries in the euro zone. That means that Faber-Castell contributes, at least in a small way, to Germany’s large and controversial trade surplus — which now rivals China’s for the world’s largest.
+
+Faber-Castell illustrates how midsize companies — which account for about 60 percent of the country’s jobs — are able to stay competitive in the global marketplace. It has focused on design and engineering, developed a knack for turning everyday products into luxury goods, and stuck to a conviction that it still makes sense to keep some production in Germany.
+
+“Why do we manufacture in Germany?” the count asked during an interview at the family castle near the factory. “Two reasons: One, to really make the best here in Germany and to keep the know-how in Germany. I don’t like to give the know-how for my best pencils away to China, for example.
+
+“Second, ‘Made in Germany’ still is important.”
+
+Not all its factories are in Germany. But when Faber-Castell, which is privately held and had sales of 590 million euros, or about $800 million, in its last fiscal year, manufactures in places like Indonesia and Brazil, it is at its own factories.
+
+In contrast to many American companies, like Apple, that have outsourced nearly all production to Asia, Faber-Castell and many other German companies make a point of keeping a critical mass of manufacturing in Germany. They see it as central to preserving the link between design, engineering and the factory floor.
+
+The result is a large trade surplus. During the first nine months of the year, Germany exported goods and services worth €148 billion more than it imported — including a surplus of €20 billion in September alone. In absolute terms, it was the largest monthly trade surplus on record.
+
+Germany’s trade surplus is so huge that it has drawn criticism from the United States. The European Commission is conducting an extensive review of whether it is unhealthy for the euro zone economy. Critics say Germany should invest more of the profits from exports at home, to stimulate its own economy and, by extension, the rest of the euro zone.
+
+But companies like Faber-Castell are more concerned about their ability to stay globally competitive, leaving the macroeconomics of trade to the bureaucrats of Brussels and Berlin.
+
+There are threats everywhere, including ever-more-sophisticated Chinese competitors, the stagnant euro zone economy and unpredictable shifts in technology. And when even preschool children know how to operate iPads, there is no certainty of a future for colored pencils and ink markers.
+
+“The biggest challenge for Faber-Castell will be how writing will develop with the advent of digital technology,” said Hermann Simon, a management consultant who coined the term “hidden champions” to describe the highly focused, midsize companies like Faber-Castell that drive the German economy. “Will children still write? But Faber-Castell recognizes this challenge.”
+		
+		
+	</div>
+	<footer><img src="http://davidsarma.org/images/DavidSarmaDotOrg_h12.png"></footer>
 </body>
 </html>
