--- a/mathjax.html
+++ b/mathjax.html
@@ -26,6 +26,14 @@
 			padding-top:12em;
 			padding-bottom:10em;
 		}
+		div.image{
+			text-align:center;
+			padding-top: 1em;
+			padding-bottom: 1em;
+		}
+		div.image > img{
+			width:400px;
+		}
 		footer { 
 			width: 175px; 
 			height: 1.5em; 
@@ -79,9 +87,66 @@ The DoG as an operator or convolution kernel is defined as:
 DoG = G_{\sigma_{1}} - G_{\sigma_{2}} = \frac{1}{\sqrt{2\pi}} \left( \frac{1}{\sigma_{1}} e^{-\frac{x^2 + y^2}{2\sigma_{1}^2}} - \frac{1}{\sigma_{2}} e^{-\frac{x^2 + y^2}{2\sigma_{2}^2}} \right)
 \]
 
+Latex		
+	
+Commutative Diagrams:		
+		$$
+\newcommand{\ra}[1]{\kern-1.5ex\xrightarrow{\ \ #1\ \ }\phantom{}\kern-1.5ex}
+\newcommand{\ras}[1]{\kern-1.5ex\xrightarrow{\ \ \smash{#1}\ \ }\phantom{}\kern-1.5ex}
+\newcommand{\da}[1]{\bigg\downarrow\raise.5ex\rlap{\scriptstyle#1}}
+\begin{array}{c}
+0 & \ra{f_1} & A & \ra{f_2} & B & \ra{f_3} & C & \ra{f_4} & D & \ra{f_5} & 0 \\
+\da{g_1} & & \da{g_2} & & \da{g_3} & & \da{g_4} & & \da{g_5} & & \da{g_6} \\
+0 & \ras{h_1} & 0 & \ras{h_2} & E & \ras{h_3} & F & \ras{h_4} & 0 & \ras{h_5} & 0 \\
+\end{array}
+$$
+
+
+Continued Fractions:
+$$e=2+\frac{1}{1+\frac{1}{2+\frac{1}{1+\frac{1}{1+\frac{1}{4+\dots}}}}}\text{ and }\pi=3+\frac{1}{7+\frac{1}{15+\frac{1}{1+\frac{1}{292+\frac{1}{1+\dots}}}}}
+$$
+
+
+Approximations of $\pi$:
+$$
+\pi\approx 3+\frac{1}{7+\frac{1}{15}}=\frac{333}{106}\text{ and } \pi\approx 3+\frac{1}{7+\frac{1}{15+\frac{1}{1+\frac{1}{292}}}}=\frac{103993}{33102}.
+$$
+
+<div class="image"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Compound_Interest_with_Varying_Frequencies.svg/350px-Compound_Interest_with_Varying_Frequencies.svg.png"></div>
+
 Faber-Castell is the largest maker of wood-encased pencils in the world and also makes a broad range of pens, crayons and art and drawing supplies as well as accessories like erasers and sharpeners. About half the company’s German production is exported, mostly to other countries in the euro zone. That means that Faber-Castell contributes, at least in a small way, to Germany’s large and controversial trade surplus — which now rivals China’s for the world’s largest.
 
 Faber-Castell illustrates how midsize companies — which account for about 60 percent of the country’s jobs — are able to stay competitive in the global marketplace. It has focused on design and engineering, developed a knack for turning everyday products into luxury goods, and stuck to a conviction that it still makes sense to keep some production in Germany.
+
+<div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/ShlomitRiger.jpg"></div>
+
+In non-relativistic wave mechanics, the wave function
+$\psi(\mathbf{r},t)$ of a particle satisfies the
+\emph{Schr\"{o}dinger Wave Equation}
+\[ i\hbar\frac{\partial \psi}{\partial t}
+  = \frac{-\hbar^2}{2m} \left(
+    \frac{\partial^2}{\partial x^2}
+    + \frac{\partial^2}{\partial y^2}
+    + \frac{\partial^2}{\partial z^2}
+  \right) \psi + V \psi.\] 
+It is customary to normalize the wave equation by
+demanding that
+\[ \int \!\!\! \int \!\!\! \int_{\textbf{R}^3}
+      \left| \psi(\mathbf{r},0) \right|^2\,dx\,dy\,dz = 1.\] 
+A simple calculation using the Schr\"{o}dinger wave
+equation shows that
+\[ \frac{d}{dt} \int \!\!\! \int \!\!\! \int_{\textbf{R}^3}
+      \left| \psi(\mathbf{r},t) \right|^2\,dx\,dy\,dz = 0,\] 
+and hence
+\[ \int \!\!\! \int \!\!\! \int_{\textbf{R}^3}
+      \left| \psi(\mathbf{r},t) \right|^2\,dx\,dy\,dz = 1\] 
+for all times~$t$. If we normalize the wave function in this
+way then, for any (measurable) subset~$V$ of $\textbf{R}^3$
+and time~$t$,
+\[ \int \!\!\! \int \!\!\! \int_V
+      \left| \psi(\mathbf{r},t) \right|^2\,dx\,dy\,dz\] 
+represents the probability that the particle is to be found
+within the region~$V$ at time~$t$.
 
 “Why do we manufacture in Germany?” the count asked during an interview at the family castle near the factory. “Two reasons: One, to really make the best here in Germany and to keep the know-how in Germany. I don’t like to give the know-how for my best pencils away to China, for example.
 
