statement of ds_ch

--- a/mathjax.html
+++ b/mathjax.html
@@ -53,6 +53,7 @@
 		<div style="text-align:center;font-weight:bold;font-size:12pt;color:#FFFFFF;padding-bottom:1.4em">A Calculus For The Present</div>		
 		<div style="text-align:center;font-size:9pt;padding-bottom:4em">DAVID SARMA</div>
 		
+
 		When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
 		$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
 		
@@ -110,6 +111,27 @@ $$
 Approximations of $\pi$:
 $$
 \pi\approx 3+\frac{1}{7+\frac{1}{15}}=\frac{333}{106}\text{ and } \pi\approx 3+\frac{1}{7+\frac{1}{15+\frac{1}{1+\frac{1}{292}}}}=\frac{103993}{33102}.
+$$
+
+$$
+\begin{align*}
+e^{i\aleph_0} &= \aleph_1 \\
+e^{i\aleph_1} &= \aleph_2 \\
+&\vdots \\
+e^{i\aleph_n} &= \aleph_{n + 1}
+\end{align*}
+$$
+
+$$
+\begin{figure}[htb]
+\begin{centering}
+\leavevmode
+
+\vspace{ -.5 in}
+\caption{This is a caption. In it, one can enter
+math mode in the usual manner.} \label{figgy1}
+\end{centering}
+\end{figure}
 $$
 
 <div class="image"><img src="http://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Compound_Interest_with_Varying_Frequencies.svg/350px-Compound_Interest_with_Varying_Frequencies.svg.png"></div>
