--- a/integralDS.html
+++ b/integralDS.html
@@ -19,13 +19,13 @@
                 }
                 div#main{
                         width:400PX;
-						height:800px;
+				/*height:800px;*/
 				/*text-align:left;*/
                         border:0px solid silver;
                         vertical-align:middle;
                         margin: 0 auto;
-                        padding-top:12em;
-                        padding-bottom:10em;
+				/*padding-top:12em;*/
+				/*padding-bottom:10em;*/
                 }
                 div.image{
                         text-align:center;
