--- a/integralDS.html
+++ b/integralDS.html
@@ -12,7 +12,7 @@
         
         <style>
                 body {
-                        color: #D7CDCC;
+                        color: #E9E7E7;
                         background-color: #000011;
                         //font-family: Arial, sans-serif;
                         font-size: 10pt;
