--- a/badTVShader.html
+++ b/badTVShader.html
@@ -33,8 +33,8 @@
 	<div id="info">BadTV Effect for Three.js by @felixturner. Click to randomize.</div>
 	<div id="container"></div>
 
-	<script src="http://www.airtightinteractive.com/demos/js/lib/three.min.js"></script>
-	<script src='http://www.airtightinteractive.com/demos/js/lib/dat.gui.min.js'></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script>
 	<script src="http://www.airtightinteractive.com/demos/js/lib/stats.min.js"></script>
 	<script src="http://www.airtightinteractive.com/demos/js/lib/postprocessing/EffectComposer.js"></script>
 	<script src="http://www.airtightinteractive.com/demos/js/lib/postprocessing/RenderPass.js"></script>
