--- a/perlinNoiseFireball.html
+++ b/perlinNoiseFireball.html
@@ -9,25 +9,10 @@
                 body {
                         color: #B1B1B1;
                         background-color: #000011;
-                        //font-family: Arial, sans-serif;
+                                /*font-family: Arial, sans-serif;*/
                         font-size: 10pt;
-                }
-                div#main{
-                        width:400PX;
-                        text-align:left;
-                        border:0px solid silver;
-                        vertical-align:middle;
-                        margin: 0 auto;
-                        padding-top:12em;
-                        padding-bottom:10em;
-                }
-                div.image{
-                        text-align:center;
-                        padding-top: 1em;
-                        padding-bottom: 1em;
-                }
-                div.image > img{
-                        width:400px;
+                                                margin: 0;
+                                                overflow: hidden;
                 }
                 footer { 
                         width: 175px; 
