--- a/perlinNoiseFireball.html
+++ b/perlinNoiseFireball.html
@@ -211,6 +211,7 @@
 		//Put the Vertex Shader code here
 		varying vec2 vUv;
 		varying float noise;
+		uniform float time;
 		
 		float turbulence(vec3 p){
 			float w = 100.0;
@@ -226,13 +227,13 @@
 			vUv = uv;
 			
 			//get a turbulet 3d noise using the normal, normal to high freq
-			noise = 10.0 * -.10 * turbulence(.5 * normal);
+			noise = 10.0 * -.10 * turbulence(.5 * normal + time);
 			
 			//get a 3d noise using the position, low frequency
-			float b = 5.0 * pnoise(0.05 * position, vec3(100.0));
+			float b = 5.0 * pnoise(0.05 * position + vec3(2.0 * time), vec3(100.0));
 			
 			//compose both noises
-			float displacement = -10. * noise + b;
+			float displacement = -10. noise + b;
 			
 			//move the position along the normal and transform it
 			vec3 newPosition = position + normal * displacement;
@@ -244,13 +245,26 @@
 		//Put the Fragment Shader code here
 		varying vec2 vUv;
 		varying float noise;
+		uniform sampler2D tExplosion;
+		
+		float random(vec3 scale, float seed){
+			return fract(sin(dot(gl_FragCoord.xyz + seed, scale)) * 43758.5453 + seed);
+		}
 		
 		void main() {
 			//color is RGBA: u,v,0,1
 			//compose the color using the UV coordinate
 			//and modulate it with the noise like ambient occlusion
-			vec3 color = vec3(vUv * (1. - 2. * noise), 0.0);
-			gl_FragColor = vec4(color.rgb, 1.);
+			//vec3 color = vec3(vUv * (1. - 2. * noise), 0.0);
+			
+			//get a random offset
+			float r = .01 * random(vec3(12.9898, 78.233, 151.7182), 0.0);
+			
+			//lookup vertically in the texture, using noise and offset to get the right RGB color
+			vec2 tPos = vec2(0, 1.0 - 1.3 * noise + r);
+			vec4 color = texture2D(tExplosion, tPos);
+			
+			gl_FragColor = vec4(color.rgb, 1.0);
 		}
 	</script>
 	
@@ -291,6 +305,17 @@
 			});
 			*/
 			material = new THREE.ShaderMaterial({
+				uniforms:{
+					tExplosion:{//texture in slot 0, loaded with ImageUtils
+						type: "t",
+						value: 0,
+						texture: THREE.ImageUtils.loadTexture('http://www.clicktorelease.com/blog/vertex-displacement-webgl-glsl-perlin-noise-three-js/explosion.png')
+					},
+					time:{//float initialized to 0
+						type: "f",
+						value: 0.0
+					}
+				},				
 				vertexShader: document.getElementById('vertexShader').textContent,
 				fragmentShader: document.getElementById('fragmentShader').textContent
 			});
@@ -313,6 +338,7 @@
 		
 		function render(){
 			//let there be light
+			material.uniforms['time'].value = .00025 * (Date.now() - start);
 			renderer.render(scene, camera);
 			requestAnimationFrame(render);
 		}
