--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                <!-- <div style="text-align:center;font-weight:bold;font-size:30pt;color:#FFFFFF;padding-bottom:1.4em">\[ \int dS \]</div> -->      
                 
                 <a href="http://ds604.github.io/website/integralDS.html">Integral dS</a><br>
-                        <a href="http://ds604.github.io/website/badTVShader.html.html">Bad TV Shader</a><br>
-                        <a href="http://ds604.github.io/website/blurImage.html.html">Blur Image</a><br>
+                        <a href="http://ds604.github.io/website/badTVShader.html">Bad TV Shader</a><br>
+                        <a href="http://ds604.github.io/website/blurImage.html">Blur Image</a><br>
                         <a href="http://ds604.github.io/website/businessPlan.html">Business Plan</a><br>
                         <a href="http://ds604.github.io/website/centeredImage.html">Centered Image</a><br>
                         <a href="http://ds604.github.io/website/centeredSquare.html">Centered Square</a><br>
