--- a/plotjs.html
+++ b/plotjs.html
@@ -27,7 +27,7 @@
 			<canvas id="canv" width="650" height="400"></canvas>
 			<footer><img src="http://davidsarma.org/images/DavidSarmaDotOrg_h12.png"></footer>
 			
-			<script src="http://mathmed.blox.pl/resource/plot.js"></script>
+			<script src="https://dl.dropboxusercontent.com/u/7632896/js/plot.js"></script>
             <script>
                     function prepData(range, amount){
                         var arr = new Array(amount);
