--- a/work/RealWorldMatters/RealWorldMatters_02.html
+++ b/work/RealWorldMatters/RealWorldMatters_02.html
@@ -9,7 +9,7 @@
                                                 /*font-family: Arial, sans-serif;*/
                         font-size: 9pt;
                         margin: 0;
-                        overflow: hidden;
+                        /*overflow: hidden;*/
                 }
                 footer { 
                         width: 175px; 
