--- a/drawing.html
+++ b/drawing.html
@@ -82,8 +82,8 @@
                 var l = path.length;
                 for (var i = 0; i < l; i++){
                     var p = path[i];
-                    if (i === 0) ctx.moveTo(p[0], p[l]);
-                    else ctx.lineTo(p[0],p[l]);
+                    if (i === 0) ctx.moveTo(p[0], p[1]);
+                    else ctx.lineTo(p[0],p[1]);
                 }
                 ctx.stroke();
             }
