--- a/timeline.html
+++ b/timeline.html
@@ -35,7 +35,7 @@
 						display: block;
                 }
                 div.image > img{
-                        width:400px;
+                        height:230px;
                 }
                 footer { 
                         width: 175px; 
