add left and right gradients, and logo left

--- a/timeline.html
+++ b/timeline.html
@@ -14,8 +14,8 @@
                 body {
                         color: #B1B1B1;
                         background-color: #000011;
-                        //font-family: Arial, sans-serif;
-                        font-size: 10pt;
+                        font-family: Arial, sans-serif;
+                        font-size: 8pt;
                 }
                 div#main{
 				/*width:403PX;*/
@@ -56,39 +56,27 @@
         <div id="main">
                 <!--<div style="text-align:center;font-size:12pt;color:#FFFFFF;padding-bottom:1.4em">INTEGRAL.DAVIDSARMA.ORG</div>                
                 <div style="text-align:center;font-size:9pt;padding-bottom:4em">DAVID SARMA</div>-->
-			
-			<!--
-			<div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png">01.22.2014</div>
-			<div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png">01.20.2014</div>
-			<div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140102_00.png">01.02.2014</div>
-			<div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/integralDS.jpg">01.09.2014</div>
-			-->
-                
 
-			<!--
-<div id="content" width="100%">    
-
-  <div> 
-    <div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png" width="30%" style="float:left"/> </div>
-    <div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png" width="30%" style="float:left"/></div>
-    <div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140102_00.png" width="30%" style="float:left"/></div>
-	<div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/integralDS.jpg" width="30%" style="float:left"/>  </div>
-  </div>
-
-</div>
--->
-
-			
-<table>
-  <tr>
-    <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png">01.22.2014</div></td>
-    <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png">01.20.2014</div></td>
-    <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140102_00.png">01.02.2014</div></td>
-	  <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/integralDS.jpg">01.09.2014</div></td>
-  </tr>
-</table>
+		<table style="position:relative; padding-left:30em;padding-right:20em;">
+          <tr>
+            <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png">01.22.2014</div></td>
+            <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png">01.20.2014</div></td>
+            <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140102_00.png">01.02.2014</div></td>
+        	  <td><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/integralDS.jpg">01.09.2014</div></td>
+          </tr>
+        </table>
 			
         </div>
+	<!-- Left gradient -->
+    <div style="position: fixed; top:0;left: 0; height: 100%; z-index:10;">
+    	<img src="http://davidsarma.org/images/horizontalGradient_00.png" width='300px' height='100%'>
+    </div>
+    <!-- Right gradient -->
+    <div style="position: fixed; top:0;right: 0; height: 100%; z-index:10;">
+    	<img src="http://davidsarma.org/images/horizontalGradientReverse_00.png" width='30px' height='100%'>
+    </div>
+    <!-- Logo -->
+	<div style="position:fixed;top:17em;left:1em;z-index:100;"><img src="http://davidsarma.org/images/integralDS_logo.png" style="z-index:100;"></div>
         <footer><img src="http://davidsarma.org/images/DavidSarmaDotOrg_h12.png"></footer>
 </body>
 </html>
