--- a/timeline01.html
+++ b/timeline01.html
@@ -77,6 +77,7 @@
 <div id="content" width="100%">    
 
 <div>
+	<a href="http://ds604.github.io/website/metallicMeans.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140130_00.png" width="30%" style="float:left"/> </div></a>
 	<a href="http://ds604.github.io/website/sketchyCircle.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140129_00.png" width="30%" style="float:left"/> </div></a>
 	  <a href="http://ds604.github.io/website/rotatingCircle.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png" width="30%" style="float:left"/> </div></a>
     <a href="http://ds604.github.io/website/waveSine01.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140120_00.png" width="30%" style="float:left"/></div></a>
