add 2/16: shadowRectangles and sineDivide

--- a/timeline01.html
+++ b/timeline01.html
@@ -77,6 +77,11 @@
 <div id="content" width="100%">    
 
 <div>
+
+http://ds604.github.io/website/sineDivide.html
+http://ds604.github.io/website/shadowRectangles.html
+	<a href="http://ds604.github.io/website/sineDivide.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140216_01.png" width="30%" style="float:left"/> </div></a>
+	<a href="http://ds604.github.io/website/shadowRectangles.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140216_00.png" width="30%" style="float:left"/> </div></a>
 	<a href="http://ds604.github.io/website/metallicMeans.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140130_00.png" width="30%" style="float:left"/> </div></a>
 	<a href="http://ds604.github.io/website/sketchyCircle.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140129_00.png" width="30%" style="float:left"/> </div></a>
 	  <a href="http://ds604.github.io/website/rotatingCircle.html"><div class="image"><img src="https://dl.dropboxusercontent.com/u/7632896/20140122_00.png" width="30%" style="float:left"/> </div></a>
