--- a/vastChallenge.html
+++ b/vastChallenge.html
@@ -48,6 +48,9 @@
 			font-size:12pt;
 			font-weight:bold;
 		}
+			p.indent {
+				margin-left: 1em;
+			}
 		div {
 			padding-bottom:1em;
 		}
@@ -60,46 +63,44 @@
 </head>
 <body>
         <div id="main">
-                <div style="text-align:center;font-weight:bold;font-size:12pt;color:#FFFFFF;padding-bottom:1.4em">VAST Challenge 2013</div>                
-                <div style="text-align:center;font-size:9pt;padding-bottom:4em">JULIAN HIBBARD<br>DAVID SARMA</div>
-      
-		<p class="heading1">Description of Business</p>
+                <div style="text-align:center;font-weight:bold;font-size:12pt;color:#FFFFFF;padding-bottom:1.4em">VAST Challenge 2013<br> Design Review</div>                
+                <div style="text-align:center;font-size:9pt;padding-bottom:4em">DAVID SARMA</div>
+     
 		<div>
-			Paper  112 - Team LAB VAST 2013 Challenge - LAB-LAZARIKOS-MC2
-Reviewer 2 - David Sarma
+<p class="heading1">Paper  112 - Team LAB<br>Reviewer 2 - David Sarma</p>
 
-Overall rating:  8  (scale is 4..50; 50 is best)
-
-Review Criteria 1: Creativity of the design (25%)
-
+Overall rating:  8  (scale is 4..50; 50 is best)<br><br>
+Review Criteria 1: Creativity of the design (25%)<br>
 
 Overall Creativity Score
-
+<p class="indent">
    Marginal
+			</p>
 
 Comments on Creativity
-
+			<p class="indent">
    The entry appears more concerned with trying out the software library
    than with addressing the needs of the design challenge. The library is
    undoubtedly helpful, but creativity is constrained by trying to formulate
    the problem in terms of a pre-existing framework, and it's unclear that
    the framework is relevant to the goal of the challenge.
+			</p>
 
-
-Review Criteria 2: Scale of the design (25%)
-
+			<br>
+Review Criteria 2: Scale of the design (25%)<br>
 
 Overall Scale Score
-
+<p class="indent">
    Poor
-
+			</p>
+	
 Comments on Scale
-
+<p class="indent">
    The network represented is at the scale of a local cluster. It is not
    clear that the representation would scale up. The representation itself,
    as well as the struggle described to include different types of
    information, suggest that it would not. Additional comments are below.
-
+			</p>
 
 Review Criteria 3: Effectiveness of the design (25%)
 
@@ -107,25 +108,27 @@ Review Criteria 3: Effectiveness of the design (25%)
    You are able to differentiate between events that represent physical and infrastructure failures, malicious activity against the network, or other aberrant behavior or activity.
 
 Overall Effectiveness Score
-
+<p class="indent">
    Average
-
+</p>
+	
 Comments on Effectiveness
-
+<p class="indent">
    The sparklines are interesting, and a timeline metaphor could possibly be
    developed further. But there is no clear overview picture that can be
    derived from the display at a glance, speaking to what the primary
    concerns are, where they are, how are they related, where to look. The
    information that might give a sense of overall network health is not
    presented in a compelling manner.
-
+</p>
 
 Overall Submission
-
+<p class="indent">
    Marginal
+</p>
 
 Comments on Overall Submission
-
+<p class="indent">
    Comments on guiding metaphor:
    This design appears appropriate to serve the purpose of an interface for
    an analyst's drilldown workspace to organize their work on particuar
@@ -182,6 +185,7 @@ Comments on Overall Submission
    challenge. It appears that formulating the problem in terms possible to
    address with the software library may have drawn attention away from the
    concerns of the design challenge.
+</p>
 		</div>	
 			
 		<p class="heading1">Leadership Role</p>
